--- a/css/styles.css
+++ b/css/styles.css
@@ -425,6 +425,7 @@ footer {
   align-items: baseline;
 }
 .footer-address {
+  flex-grow: 1;
   margin-right: 70px;
 }
 
@@ -503,6 +504,7 @@ footer {
 }
 .subscribe-button {
   display: flex;
+  align-items: center;
   border-color: transparent;
   font-weight: bold;
   font-size: 16px;
@@ -569,7 +571,7 @@ footer {
 
 .card-link {
   display: block;
-  
+
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .card-link:hover,
@@ -720,6 +722,8 @@ footer {
   fill: var(--accent-color);
 }
 .modal-form-textarea {
+  display: block;
+  margin-bottom: 20px;
   font-family: inherit;
   resize: none;
   height: 120px;
@@ -744,6 +748,7 @@ footer {
 }
 .modal-form-checkbox {
   display: flex;
+  justify-content: center;
   align-items: center;
   margin-bottom: 30px;
 
@@ -769,7 +774,8 @@ footer {
   height: 15px;
   margin-right: 7px;
 
-  border: 1px solid #212121;
+  border: 2px solid #212121;
+  border-radius: 2px;
   cursor: pointer;
 }
 
